[patch.crates-io]
errno = { path = "local-crates/errno-fix" }
wasm-opt = { path = "local-crates/wasm-opt" }
wasm-opt-sys = { path = "local-crates/wasm-opt-sys" }
wasm-opt-cxx-sys = { path = "local-crates/wasm-opt-cxx-sys" }
librocksdb-sys = { path = "local-crates/librocksdb-sys-0.10.0+7.9.2" }
sc-runtime-test = { path = "empty-sc-runtime-test" }

[workspace]
members = [
  "node",
  "blesschain-runtime"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Blesschain Team"]
license = "GPL-3.0-only"
homepage = "https://blesschain.com"
repository = "https://github.com/welcometoblesschain"

[workspace.lints]
# This disables the lints block that some crates try to inherit

[workspace.dependencies]
libc = "0.2"
cfg-if = "1.0"
serde = { version = "1.0", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false }
log = { version = "0.4.20", default-features = false }
scale-info = { version = "2.11.2", features = ["derive"], default-features = false }

sp-core = { path = "blesschain-sdk/primitives/core", default-features = false }
sp-io = { path = "blesschain-sdk/primitives/io", default-features = false }
sp-runtime = { path = "blesschain-sdk/primitives/runtime", default-features = false }
sp-externalities = { path = "blesschain-sdk/primitives/externalities", default-features = false }
sp-weights = { path = "blesschain-sdk/primitives/weights", default-features = false }
sp-version = { path = "blesschain-sdk/primitives/version", default-features = false }
sp-inherents = { path = "blesschain-sdk/primitives/inherents", default-features = false }

frame-support = { path = "blesschain-sdk/frame/support", default-features = false }
frame-support-procedural = { path = "blesschain-sdk/frame/support/procedural" }
frame-system = { path = "blesschain-sdk/frame/system", default-features = false }
frame-system-procedural = { path = "blesschain-sdk/frame/system/procedural" }
frame-metadata = { path = "blesschain-sdk/frame/metadata" }
frame-benchmarking = { path = "blesschain-sdk/frame/benchmarking" }
pallet-balances = { path = "blesschain-sdk/frame/balances", default-features = false }

#substrate-wasm-builder = { path = "blesschain-sdk/utils/wasm-builder" }

sp-state-machine = { path = "blesschain-sdk/primitives/state-machine" }
sp-offchain = { path = "blesschain-sdk/primitives/offchain" }
sp-session = { path = "blesschain-sdk/primitives/session" }
sp-api = { path = "blesschain-sdk/primitives/api" }
sp-traits = { path = "blesschain-sdk/primitives/traits" }
sp-std = { path = "blesschain-sdk/primitives/std" }
sp-debug-derive = { path = "blesschain-sdk/primitives/debug-derive" }
inflector = "0.11"
Inflector = "0.11"
cfg-expr = "0.15"

# Common macro dependencies
derive-syn-parse = "0.1"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
unicode-ident = "1.0"
unicode-xid = "0.2"
paste = "1.0.14"
frame-support-procedural-tools = { path = "blesschain-sdk/frame/support/procedural/tools" }
itertools = "0.10"
sp-crypto-hashing = { path = "blesschain-sdk/primitives/crypto/hashing" }
pretty_assertions = "1.4.0"
regex = "1.10.4"
sp-metadata-ir = { path = "blesschain-sdk/primitives/metadata/ir" }
proc-macro-crate = "1.3.1"

blake2b_simd = "1.0"
byteorder = "1.4"
digest = "0.10"
sha2 = "0.10"
sha3 = "0.10"
twox-hash = "1.6"
criterion = "0.5"
sp-crypto-hashing-proc-macro = { path = "blesschain-sdk/primitives/crypto/hashing/proc-macro" }
linregress = "0.7"
sp-application-crypto = { path = "blesschain-sdk/primitives/application-crypto" }
sp-runtime-interface = { path = "blesschain-sdk/primitives/runtime-interface" }
sp-storage = { path = "blesschain-sdk/primitives/storage" }
static_assertions = "1.1"
array-bytes = { path = "blesschain-sdk/primitives/array-bytes" }
rusty-fork = "0.3"
sc-client-db = { path = "blesschain-sdk/client/db" }
sp-keystore = { path = "blesschain-sdk/primitives/keystore" }
hash-db = "0.16"
sp-api-proc-macro = { path = "blesschain-sdk/primitives/api/proc-macro" }
sp-trie = { path = "blesschain-sdk/primitives/trie" }
thiserror = "1.0"
sp-test-primitives = { path = "blesschain-sdk/primitives/test-primitives" }
blake2 = "0.10"
assert_matches = "1.5"
ark-vrf = "0.3"
bip39 = "1.1"
bitflags = "1.3"
bounded-collections = { path = "blesschain-sdk/frame/support/bounded-collections" }
bs58 = "0.5"
dyn-clonable = "0.9"
ed25519-zebra = "3.1"
futures = "0.3"
hash256-std-hasher = "0.15"
impl-serde = "0.3"
k256 = "0.13"
libsecp256k1 = "0.7"
merlin = "3.0"
parking_lot = "0.12"
primitive-types = "0.12"
rand = "0.8"
schnorrkel = "0.10"
secp256k1 = "0.24"
secrecy = "0.8"
ss58-registry = "1.45"
substrate-bip39 = { path = "blesschain-sdk/primitives/bip39" }
tracing = "0.1"
w3f-bls = { path = "blesschain-sdk/primitives/bls" }
zeroize = "1.7"
serde_json = "1.0"
