[workspace]
members = [
    "blesschain-node/node",
    "blesschain-runtime",
]

resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["BlessChain Team <dev@blesschain.org>"]
homepage = "https://blesschain.org"
repository = "https://github.com/blesschain-official/blesschain"

[workspace.lints.rust]
level = "warn"
rust = "warn"
clippy = "warn"

[workspace.dependencies]
clap = { version = "4.5.4", features = ["derive"] }
docify = "0.2.0"
futures = { version = "0.3.30", features = ["thread-pool"] }
futures-timer = "3.0.2"
jsonrpsee = { version = "0.24.2", features = ["server"] }
serde_json = "1.0"

