[package]
name = "blesschain-runtime"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

# FRAME core
frame-support = { path = "../../blesschain-sdk/substrate/frame/support" }
frame-system  = { path = "../../blesschain-sdk/substrate/frame/system" }
frame-executive = { path = "../../blesschain-sdk/substrate/frame/executive" }

# FRAME pallets
pallet-balances  = { path = "../../blesschain-sdk/substrate/frame/balances" }
pallet-timestamp = { path = "../../blesschain-sdk/substrate/frame/timestamp" }
pallet-aura      = { path = "../../blesschain-sdk/substrate/frame/aura" }

# Substrate primitives
sp-runtime        = { path = "../../blesschain-sdk/substrate/primitives/runtime" }
sp-core           = { path = "../../blesschain-sdk/substrate/primitives/core" }
sp-io             = { path = "../../blesschain-sdk/substrate/primitives/io" }
sp-api            = { path = "../../blesschain-sdk/substrate/primitives/api" }
sp-inherents      = { path = "../../blesschain-sdk/substrate/primitives/inherents" }
sp-version        = { path = "../../blesschain-sdk/substrate/primitives/version" }
sp-timestamp      = { path = "../../blesschain-sdk/substrate/primitives/timestamp" }
sp-consensus-aura = { path = "../../blesschain-sdk/substrate/primitives/consensus/aura" }
sp-std = { path = "../../blesschain-sdk/substrate/primitives/std", default-features = false }
sp-block-builder = { path = "../../blesschain-sdk/substrate/primitives/block-builder", default-features = false }
sp-transaction-pool = { path = "../../blesschain-sdk/substrate/primitives/transaction-pool", default-features = false }
pallet-transaction-payment = { path = "../../blesschain-sdk/substrate/frame/transaction-payment", default-features = false }

# Codecs
parity-scale-codec = { version = "3.6.5", features = ["derive"] }
scale-info         = { version = "2.11.2", features = ["derive"] }

serde = { version = "1.0", default-features = true }

[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "pallet-timestamp/std",
  "pallet-aura/std",
  "sp-runtime/std",
  "sp-core/std",
  "sp-io/std",
  "sp-api/std",
  "sp-inherents/std",
  "sp-version/std",
  "sp-timestamp/std",
  "sp-consensus-aura/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "serde/std",
  "sp-std/std",
  "sp-block-builder/std",
  "sp-transaction-pool/std",
  "pallet-transaction-payment/std",
]

