[package]
name = "blesschain-node"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
blesschain-runtime = { path = "../blesschain-runtime" }
sc-cli = { path = "../blesschain-sdk/client/cli" }
sc-service = { path = "../blesschain-sdk/client/service" }
sc-executor = { path = "../blesschain-sdk/client/executor" }
sc-client-api = { path = "../blesschain-sdk/client/api" }
sc-consensus = { path = "../blesschain-sdk/client/consensus/common" }
sc-consensus-aura = { path = "../blesschain-sdk/client/consensus/aura" }
sp-consensus = { path = "../blesschain-sdk/primitives/consensus/common" }
sp-consensus-aura = { path = "../blesschain-sdk/primitives/consensus/aura" }
sp-core = { path = "../blesschain-sdk/primitives/core" }
sp-inherents = { path = "../blesschain-sdk/primitives/inherents" }
sp-io = { path = "../blesschain-sdk/primitives/io" }
clap = { version = "4.5", features = ["derive"] }
sp-api = { path = "../blesschain-sdk/primitives/api", default-features = false }
sp-block-builder = { path = "../blesschain-sdk/primitives/block-builder", default-features = false }

[features]
default = []

[[bin]]
name = "blesschain-node"
path = "src/main.rs"
